fix：【iot 物联网】增强 jdk8 的兼容性